# vanttec_uuv

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  LICENSE  Makefile  README.md  README.rst  bashrc  create_container_gpu.bash  create_container_mac.bash  entrypoint.sh  init_workspace.sh  package.xml
src/uuv_can/: CMakeLists.txt  package.xml
src/uuv_can/config/: motorPosition.yaml
src/uuv_can/launch/: uuv_can_node_launch.py
src/uuv_can/libs/vanttec_CANLib/: CMakeLists.txt
src/uuv_can/src/: allocation_matrix_const.h  can_node_base.cpp  can_node_base.h  can_node_uuv.cpp
src/uuv_control/: CMakeLists.txt  package.xml
src/uuv_control/launch/: cuadrado_launch.py  hundir_launch.py  jetsonPruebas.launch.py  pc.launch.py  rvizLaunch.py  teleop_launch.py  teleop_sim.launch.py  uuv_control_sim_launch.py
src/uuv_control/libs/uuv_libs/: CMakeLists.txt  README.md  setup.py
src/uuv_control/libs/uuv_libs/python/: python_bindings.cpp
src/uuv_control/libs/uuv_libs/src/control/: pid.cpp  pid.h  (+1 more)
src/uuv_control/meshes/: uuv.STL
src/uuv_control/scripts/: pid.py  teleop_node_forces.py
src/uuv_control/src/: README.md  dynamic_model_uuv.cpp  estados.cpp  joystick.py  matriz_locacion.cpp  objetivo.cpp  objetivo_cuadrado.cpp  objetivo_hundir.cpp  pid6dof_node.cpp  pid6dof_node_prev.cpp  posicion.cpp  visualizador.cpp  visualizador.py
src/uuv_control/src/changingFiles/: waypoint_handler_node.cpp
src/uuv_control/src/toChangeFiles/: LOS_node.cpp  pid.cpp  tf2_broadcaster_node.cpp  waypoint_handler_node.cpp
uuv_control/: CMakeLists.txt  README.md  README.me  package.xml
uuv_control/config/: VTec_U4_PID_Gains.yaml  uuv_init_cond.yaml
uuv_control/include/: odometry_calculator.hpp  pid_controller.hpp  uuv_4dof_controller.hpp  vtec_u3_gamma_parameters.hpp
uuv_control/include/UUVs/: vtec_u4_model_nodelet.hpp
uuv_control/launch/: rviz.launch  uuv_control_sim_launch.py  uuv_simulation.launch  vtec_u4_antsmc.launch  vtec_u4_asmc.launch  vtec_u4_model.launch  vtec_u4_pid.launch  vtec_u4_pid2.launch  vtec_u4_pid2_traj.launch
uuv_control/launch/rviz_cfg/: map_trajectory.rviz  uuv.rviz  uuv_predef_traj.rviz
uuv_control/libs/uuv_libs/src/control/: pid6dof.h
uuv_control/models/: vtec_u3.urdf
uuv_control/src/: dynamic_model_sim.cpp  dynamic_model_uuv.cpp  guidance_node.cpp  log.txt  odometry_calculator.cpp  path_publisher_node.cpp  pid6dof_node.cpp  pid_controller.cpp  pid_node.cpp  tf2_broadcaster_node.cpp  uuv_4dof_controller.cpp  uuv_control_node.cpp  uuv_odometry_node.cpp  uuv_trajectory_node.cpp
uuv_control/src/UUVs/: 6dof_tf2_broadcast_node.cpp  tf2_6dof_broadcast_node.cpp
uuv_control/src/UUVs/controllers/first_order/: vtec_u4_pid_control_node.cpp
uuv_control/src/UUVs/controllers/second_order/: vtec_u4_antsmc_node.cpp  vtec_u4_asmc_node.cpp  vtec_u4_pid_node.cpp  vtec_u4_pid_node_traj.cpp
uuv_control/src/UUVs/model/: in_vtec_u4_simulation_node.cpp  vtec_u4_model_nodelet.cpp  vtec_u4_simulation_node.cpp
uuv_control/src/UUVs/models/: in_vtec_u4_simulation_node.cpp  vtec_u4_model_nodelet.cpp  vtec_u4_simulation_node.cpp
uuv_control/src/pid/: pid.cpp  pid.hpp
uuv_control/src/toChangeFiles/: dynamic_model_sim.cpp  readme.md
uuv_control/tests/: 6dof_vtec_u4_pid_test.cpp  asmc_guidance_unit_test.cpp
uuv_description/: CMakeLists.txt  package.xml
uuv_description/launch/: vtec_u3.launch
uuv_description/msg/: DetectedObstacles.msg  MasterStatus.msg  ObjectDetectedList.msg  Obstacle.msg  SplineDefinition.msg  SystemDynamics.msg  Trajectory.msg
uuv_description/robots/: vtec_u3.xacro
uuv_description/rviz/: urdf.rviz
uuv_description/src/: gazebo_interface_uuv.cpp
uuv_description/urdf/: uuv.urdf
uuv_description/urdf/UUVs/: vtec_u3_base.xacro  vtec_u3_sensors.xacro  vtec_u3_shooter.xacro
uuv_guidance/: CMakeLists.txt  package.xml
uuv_guidance/include/: uuv_guidance_controller.hpp
uuv_guidance/msg/: GuidanceWaypoints.msg
uuv_guidance/src/: uuv_guidance_controller.cpp  uuv_guidance_node.cpp
uuv_master/: CMakeLists.txt  package.xml
uuv_master/include/: master_node.hpp
uuv_master/include/master/: master_node.h
uuv_master/include/msg/: UUVMasterStatus.msg
uuv_master/launch/: uuv_simulation.launch  uuv_simulation_auto.launch
uuv_master/msg/: UUVMasterStatus.msg
uuv_master/src/: master_node.cpp  uuv_master_node.cpp
uuv_motion_planning/: CMakeLists.txt  package.xml
uuv_motion_planning/config/: planner_config.yaml
uuv_motion_planning/include/: uuv_commons.hpp
uuv_motion_planning/launch/: planner_controller.launch  rrt_star.launch  s_curve.launch  trajectory_planner.launch
uuv_motion_planning/launch/rviz_cfg/: map_uuv.rviz
uuv_motion_planning/lib/vanttec_motion_planners/: README.md
uuv_motion_planning/lib/vanttec_motion_planners/path_planners/include/: RRT_star.hpp  motion_validator.hpp
uuv_motion_planning/lib/vanttec_motion_planners/path_planners/src/: RRT_star.cpp  motion_validator.cpp
uuv_motion_planning/scripts/: plot_trajectory.py
uuv_motion_planning/src/: rrt_star_node.cpp  s_curve_node.cpp  s_curve_trajectory.cpp  s_curve_trajectory_node.cpp  tutorial.cpp  uuv_motion_planning_node.cpp
uuv_simulation/: CMakeLists.txt  README.md  package.xml
uuv_simulation/include/: tf_broadcaster.hpp  uuv_dynamic_4dof_model.hpp  uuv_model.hpp  vtec_u3_gamma_parameters.hpp
uuv_simulation/launch/: rviz.launch
uuv_simulation/models/: uuv_gamma.urdf
uuv_simulation/src/: master_node.cpp  tf_broadcaster.cpp  uuv_dynamic_4dof_model.cpp  uuv_master_node.cpp  uuv_simulation_node.cpp  uuv_tf_broadcast_node.cpp
uuv_user_control/: CMakeLists.txt  package.xml
uuv_user_control/include/: keyboard.hpp
uuv_user_control/src/: keyboard.cpp  main.cpp
vehicle_user_control/: CMakeLists.txt  README.md  package.xml
vehicle_user_control/include/: keyboard.hpp
vehicle_user_control/src/: keyboard.cpp  vehicle_user_control.cpp
ws/uuv_localization/: CMakeLists.txt  package.xml
ws/uuv_localization/launch/: imu.py  imu_kalman_filter.py
ws/uuv_localization/src/: vectornav.cc
ws/uuv_teleop/: CMakeLists.txt  package.xml
(+303 files in other folders)
