<?xml version="1.0"?>
<package>
  <name>vanttec_uuv</name>
  <version>1.0.0</version>
  <description>VantTec Unmanned Underwater Vehicle package.</description>
  <license>GPLv2</license>

  <maintainer email="pedro.sc.97@gmail.com">v01d</maintainer>
  <author email="pedro.sc.97@gmail.com">v01d</author>

    <!-- Standard Dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vehicle_user_control</build_depend>
  <build_depend>pcl_ros</build_depend>
  <!-- <build_depend>actionlib</build_depend> -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vehicle_user_control</run_depend>
  <run_depend>pcl_ros</run_depend>
  <!-- <run_depend>actionlib</run_depend>   -->
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
</package>