<package format="2">

    <name>vanttec_uuv</name>
    <version>1.1.1</version>
    <description> XML package for the uuv's repository. </description>
    <maintainer email="vanttec@gmail.com">Ivan Díaz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend> roscpp </depend>
    <depend> std_msgs </depend>
    <depend> geometry_msgs </depend>

</package>